Bug 363433 - appstreamurl not working if discover is already open
Summary: appstreamurl not working if discover is already open
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.6.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-23 14:47 UTC by Harald Sitter
Modified: 2016-05-24 13:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
video (795.44 KB, image/gif)
2016-05-23 14:50 UTC, Harald Sitter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2016-05-23 14:47:30 UTC
If discover is already open when one tries to use an appstream url the url does absolutely nothing. If one closes discover and tires the url, discover starts as expected again

Reproducible: Always

Steps to Reproduce:
1. open discover
2. try to run url
3. does nothing

Actual Results:  
running url should always push the application onto the page stack (assuming the application is even found anyway)
Comment 1 Harald Sitter 2016-05-23 14:50:36 UTC
Created attachment 99143 [details]
video
Comment 2 Aleix Pol 2016-05-24 13:55:54 UTC
Git commit fe8f526374613b9c06c533e6c2cd4a9b4538801b by Aleix Pol.
Committed on 24/05/2016 at 13:55.
Pushed by apol into branch 'master'.

React to remotely executed sessions

Makes it possible to change the currently shown resource

M  +62   -43   discover/main.cpp

http://commits.kde.org/discover/fe8f526374613b9c06c533e6c2cd4a9b4538801b