React to remotely executed sessions

Makes it possible to change the currently shown resource

BUG: 363433